Correccion de arrows slider

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=c6c2aa9e15be01afaf41",
-    "/css/app.css": "/css/app.css?id=37eb246025dc01d7b7a6"
+    "/js/app.js": "/js/app.js?id=e095432eab8cc47fd59a",
+    "/css/app.css": "/css/app.css?id=37eb246025dc01d7b7a6",
+    "/css/slick.css": "/css/slick.css?id=84c5e40f19998a5dc7f5"
 }
